2.1.0/_sources/gallery/subplots_axes_and_figures/axes_props.rst.txt


.. _sphx_glr_gallery_subplots_axes_and_figures_axes_props.py:


==========
Axes Props
==========

You can control the axis tick and grid properties




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_axes_props_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    import numpy as np

    t = np.arange(0.0, 2.0, 0.01)
    s = np.sin(2 * np.pi * t)

    fig, ax = plt.subplots()
    ax.plot(t, s)

    ax.grid(True, linestyle='-.')
    ax.tick_params(labelcolor='r', labelsize='medium', width=3)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.021 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: axes_props.py <axes_props.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: axes_props.ipynb <axes_props.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
